; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_cell.c_cell_sync_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_cell.c_cell_sync_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@profiling_mode = common dso_local global i64 0, align 8
@SPU_PROFILING_CYCLES = common dso_local global i64 0, align 8
@SPU_PROFILING_EVENTS = common dso_local global i64 0, align 8
@DO_GENERIC_SYNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cell_sync_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cell_sync_start() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @profiling_mode, align 8
  %3 = load i64, i64* @SPU_PROFILING_CYCLES, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %9, label %5

5:                                                ; preds = %0
  %6 = load i64, i64* @profiling_mode, align 8
  %7 = load i64, i64* @SPU_PROFILING_EVENTS, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %5, %0
  %10 = call i32 (...) @spu_sync_start()
  store i32 %10, i32* %1, align 4
  br label %13

11:                                               ; preds = %5
  %12 = load i32, i32* @DO_GENERIC_SYNC, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @spu_sync_start(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
